--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,11 @@
-
+<style>
+  h3:hover {
+    color: rgb(277, 0, 0);
+    cursor: pointer;
+  }
+</style>
+<body bgcolor="#D4E2D4">
+  <center>
+    <h3>Design By: AMRAN fFRENLY PANJAITAN &copy;2024</h3>
+  </center>
+</body>
