--- a/galeri.html
+++ b/galeri.html
@@ -1,1 +1,152 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Formulir</title>
+  </head>
+  <body bgcolor="#00000">
+    <a href="#bawah" id="atas" style="text-decoration: none; color: black"
+      >Go Down &#9778;</a
+    >
+    <br />
+    <h2 align="center">My Gallery</h2>
+
+    <center>
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg""
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 2"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 3"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+    </center>
+
+    <br />
+
+    <center>
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 1"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 2"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 3"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+    </center>
+
+    <br />
+
+    <center>
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 1"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 2"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 3"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+    </center>
+
+    <br />
+
+    <center>
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 1"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 2"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+
+      <a href="home.html" target="content">
+        <img
+          src="pngtree-people-standing-alone-by-the-river-during-the-day-picture-image_1528952.jpg"
+          alt="Gambar 3"
+          width="200"
+          height="150"
+          hspace="20"
+        />
+      </a>
+    </center>
+
+    <br />
+    <a href="#atas" id="bawah" style="text-decoration: none; color: black"
+      >Go Top &#9778;</a
+    >
+  </body>
+</html>
